tdf#163974: ignore nested footnotes on ODF import

That is a valid, but unsupported, markup, that is explicitly mentioned
in ODF 1.4 part 3 "Schema" sect. 6.3.4 "<text:note-body>":

  Note: The schema allows for the inclusion of <text:note> elements as
  a descendant of a child of the <text:note-body> element. While this
  may be reasonable for note types, it is not reasonable for footnotes
  and endnotes. Conforming consumers need not support notes inside notes.

(The "reasonable for note types" is obviously an editorial error from the time when ODF 1.1 text "reasonable for some future note types"
was reviewed for ODF 1.2.)

As the ODF also specifies, that a conforming consumer "need not
interpret the semantics of all elements, attributes and attribute values"
(ibid., sect. 2.4 "Consumer"), it is OK to silently drop this data, just
as done for other similar cases.

Change-Id: I0a417981087ebf225565628f14409661058d100d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176906
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 512ef23224987e3107e66241db3b42934e15a561)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176919
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>